--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   </header>
 
   <main id="maincontent">
-    <section id="map-container">
-      <div id="map"></div>
+    <section id="map-container" tabindex="-1">
+      <div id="map" tabindex="-1"></div>
     </section>
     <section>
       <div class="filter-options">
