--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
 
   <main id="maincontent">
     <section id="map-container" tabindex="-1">
-      <div id="map" tabindex="-1"></div>
+      <div id="map" tabindex="-1" aria-label='Map with restaurant locations' role='application'></div>
     </section>
     <section>
-      <div class="filter-options">
+      <div class="filter-options" tabindex="0" aria-label='Filter results'>
         <h2>Filter Results</h2>
-        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()" aria-label='Neighborhood select'>
           <option value="all">All Neighborhoods</option>
         </select>
-        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()" aria-label='Cuisine select'>
           <option value="all">All Cuisines</option>
         </select>
       </div>
-      <ul id="restaurants-list"></ul>
+      <ul id="restaurants-list" tabindex="0" aria-label='Restaurant list'></ul>
     </section>
   </main>
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
